[gd_scene load_steps=3 format=3 uid="uid://cpe23cn1qikhf"]

[ext_resource type="Script" uid="uid://ce7mrxp1iu4i8" path="res://scripts/main_menu/pause_menu.gd" id="1_6tw0m"]
[ext_resource type="Theme" uid="uid://b2aoldv3yg7kx" path="res://themes/main_menu_theme.tres" id="2_0lmf7"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_6tw0m")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(0.219608, 0.219608, 0.219608, 0.709804)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0lmf7")
theme_override_constants/separation = 20
alignment = 1

[node name="CoinsLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Coins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level Reached: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Kills: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Time: 0s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradesLabel" type="Label" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Upgrades:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="GridContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
columns = 3

[node name="ResumeButton" type="Button" parent="ColorRect/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="RetryButton" type="Button" parent="ColorRect/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Retry"

[node name="MenuButton" type="Button" parent="ColorRect/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"
